// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskRunner Constructor throwsErrorOnInvalidParallelism 1`] = `"Invalid parallelism value of 'tequila', expected a number or 'max'"`;

exports[`TaskRunner Error logging preservedLeadingBlanksButTrimmedTrailingBlanks 1`] = `"Project(s) failed"`;

exports[`TaskRunner Error logging printedAbridgedStdoutAfterErrorWithEmptyStderr 1`] = `"Project(s) failed"`;

exports[`TaskRunner Error logging printedStderrAfterError 1`] = `"Project(s) failed"`;

exports[`TaskRunner Error logging printedStdoutAfterErrorWithEmptyStderr 1`] = `"Project(s) failed"`;

exports[`TaskRunner Warning logging Fail on warning Logs warnings correctly 1`] = `"An error occurred."`;

exports[`TaskRunner Warning logging Fail on warning Logs warnings correctly 2`] = `
Array [
  Object {
    "stream": "O",
    "text": "Executing a maximum of 1 simultaneous processes...[r][n][n]",
  },
  Object {
    "stream": "O",
    "text": "[x][37m[success with warnings (failure)] started[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "Build step 1[r][n][n]",
  },
  Object {
    "stream": "O",
    "text": "Warning: step 1 succeeded with warnings[r][n][n]",
  },
  Object {
    "stream": "E",
    "text": "1 of 1: [success with warnings (failure)] completed with warnings in 0.10 seconds[n]",
  },
  Object {
    "stream": "E",
    "text": "[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m[x][4mSUCCESS WITH WARNINGS (1)[x][24m[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m================================[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m[x][4msuccess with warnings (failure) (0.10 seconds)[x][24m[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m================================[x][39m[n][x][33m[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[n]",
  },
  Object {
    "stream": "E",
    "text": "Project(s) succeeded with warnings[n]",
  },
]
`;

exports[`TaskRunner Warning logging Success on warning Logs warnings correctly 1`] = `
Array [
  Object {
    "stream": "O",
    "text": "Executing a maximum of 1 simultaneous processes...[r][n][n]",
  },
  Object {
    "stream": "O",
    "text": "[x][37m[success with warnings (success)] started[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "Build step 1[r][n][n]",
  },
  Object {
    "stream": "O",
    "text": "Warning: step 1 succeeded with warnings[r][n][n]",
  },
  Object {
    "stream": "E",
    "text": "1 of 1: [success with warnings (success)] completed with warnings in 0.10 seconds[n]",
  },
  Object {
    "stream": "E",
    "text": "[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m[x][4mSUCCESS WITH WARNINGS (1)[x][24m[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m================================[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m[x][4msuccess with warnings (success) (0.10 seconds)[x][24m[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[x][33m================================[x][39m[n][x][33m[x][39m[n]",
  },
  Object {
    "stream": "O",
    "text": "[n]",
  },
]
`;
